--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -41,6 +41,15 @@ b{
     float: right;
 
 }
+.card {
+    border-radius: 30px;
+    padding: 25px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 5px rgba(2, 0, 0, 1);
+    margin-left: 25px;
+    margin-right: 25px;
+}
 .cardmb-3{
     position: relative;
     max-width: 100%;
