--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,5 +81,10 @@ nav ul li a:hover{
  font-size: 30px; 
  color: rgb(3, 160, 3); 
 }
+.btn-primary {
+    background-color: green;
+    color: white;
+  }
+
 
 
