--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -137,3 +137,8 @@ footer .footer-text p{
     width: 200px;
     height: 150px;
   }
+.imagenespensamiento {
+      width: 200px;
+      height: 150px;
+    }
+
