--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,7 +81,7 @@ nav ul li a:hover{
  font-size: 30px; 
  color: rgb(3, 160, 3); 
 }
-.btn-bonito {
+footer.btn-bonito {
     background: #28a745;
     color: white;
     font-size: 1.2rem;
