--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,17 +81,17 @@ nav ul li a:hover{
  font-size: 30px; 
  color: rgb(3, 160, 3); 
 }
-footer.btn-bonito {
-    background: #28a745;
-    color: white;
-    font-size: 1.2rem;
-    font-weight: bold;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
+.btn-bonito {
+    background: #28a745 !important;
+    color: white !important;
+    font-size: 1.2rem !important;
+    font-weight: bold !important;
+    padding: 5px 10px !important;
+    border: none !important;
+    border-radius: 30px !important;
+    cursor: pointer !important;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2) !important;
+    transition: all 0.3s ease-in-out !important;
 }
 
 
